objects/Opty_Sales_Metric_Code__c.object
<CustomObject>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opty_Sales_Metric_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuoteID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteID</label>
        <referenceTo>HP_Quote__c</referenceTo>
        <relationshipName>OSMC_QuoteID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>QuoteID__r.Originating_System_Quote_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Metric Code</label>
    <nameField>
        <label>Opty Sales Metric Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Metric Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>